--- a/AdminBlazorPages/AdminBlazorPages.csproj
+++ b/AdminBlazorPages/AdminBlazorPages.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<StaticWebAsset Remove="C:\Users\zaids\OneDrive\Desktop\AdminBlazorPages\wwwroot\app.css" />
+	</ItemGroup>
+	
+	<ItemGroup>
 		<PackageReference Include="Blazorise.Snackbar" Version="1.8.0" />
 		<PackageReference Include="Microsoft.JSInterop" Version="8.0.18" />
 		<PackageReference Include="MudBlazor" Version="8.9.0" />
