--- a/UserRequestDesktopApp/UserRequestDesktopApp.csproj
+++ b/UserRequestDesktopApp/UserRequestDesktopApp.csproj
@@ -8,4 +8,13 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Apis\Apis.csproj" />
+    <ProjectReference Include="..\Cores\Cores.csproj" />
+  </ItemGroup>
+
 </Project>
